--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .ts",
     "update-schema": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && cp ./package.json ./dist/ && cd ./dist && npm install --only=prod"
+    "build": "tsc && cp ./package.json ./dist/ && cp ./package-lock.json ./dist/",
+    "serve:prod": "cd ./dist && npm install --only=prod && node app.js"
   },
   "keywords": [],
   "author": "",
