--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "update-schema": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && cp ./package.json ./dist/ && cp ./package-lock.json ./dist/",
-    "build:prod": "cd ./dist && npm install --only=prod",
-    "start:prod": "node app.js"
+    "build:prod": "cd ./dist && npm install --only=prod && prisma generate",
+    "start:prod": "cd ./dist && node app.js"
   },
   "keywords": [],
   "author": "",
