--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .ts",
     "update-schema": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && cp ./package.json ./dist/ && cp ./package-lock.json ./dist/",
+    "build": "tsc && cp ./package.json ./dist/ && cp ./package-lock.json ./dist/ && cp -a ./prisma/ ./dist/",
     "build:prod": "cd ./dist && npm install --only=prod && prisma generate",
     "start:prod": "cd ./dist && node app.js"
   },
