--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "update-schema": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && cp ./package.json ./dist/ && cp ./package-lock.json ./dist/ && cp -a ./prisma/ ./dist/",
-    "build:prod": "cd ./dist && npm install --only=prod && npm install -g prisma && chmod +rwx /usr/local/lib/node_modules && prisma generate",
+    "build:prod": "cd ./dist && npm install --only=prod && npm install -g prisma && pwd && chmod +rwx ~/usr/local/lib/node_modules && prisma generate",
     "start:prod": "cd ./dist && node app.js"
   },
   "keywords": [],
